# src/codegen_server/openapi_server/app_context.py
@@ -37,13 +37,19 @@ def init_app(application):
     global applogger
 
     #db_uri = "sqlite:///" + os.getcwd() + "\\openapi_server\\database\\cvscanner.db"
-    db_uri = "sqlite:///" + "cvscanner.db"
+    #db_uri = "sqlite:///" + "cvscanner.db"
 
-    #connection = sqlite3.connect('cvscanner.db')
+    filename = os.path.abspath(__file__)
+    dbdir = filename.rstrip('app_context.py')
+    dbpath = os.path.join(dbdir, "cvscanner.db")
+    db_uri = "sqlite:///" + dbpath
+
+    #connection = sqlite3.connect(dbpath)
     #cursor = connection.cursor()
-    #create_table = "CREATE TABLE users (id integer, email text, name text, role text, question text, answer text, percentage integer, result text, recordingpath text, date text)"
+    #create_table = "CREATE TABLE users (id integer, email text, name text, role text, question text, answer text, percentage integer, result text, recordingpath text, date datetime)"
     #create_table = "CREATE TABLE questions (id integer, role text, hr_email text, question text, expected_answer text)"
     #create_table = "CREATE TABLE jobs (id integer, role text, hr_email text)"
+    #drop_table = "DROP TABLE users"
     #cursor.execute(create_table)
 
     applogger.info("Initializing API")
