# src/codegen_server/openapi_server/server_impl/user_controller_impl.py
@@ -4,10 +4,12 @@ from openapi_server.app_context import app, db, get_logger
 from openapi_server.utils.utilities import utils
 from openapi_server.dbmodels.db_users import Db_Users
 from openapi_server.models.user_object import UserObject
+from openapi_server.models.get_user_data_object import GetUserDataObject
 from openapi_server.models.users_model import UsersModel
 
 from datetime import datetime
 from sqlalchemy import text
+from flask import jsonify, make_response
 
 from openapi_server.models.error import Error
 from openapi_server.config import (
@@ -23,8 +25,9 @@ class User_controller_Impl:
         version_info = utils.get_api_version(accept_version)
         if version_info is None or version_info.lower() == DEFAULT_API_VERSION:
             date_format = "%Y-%m-%d %H:%M:%S"
+            add_date = datetime.strptime(datetime.utcnow().strftime(date_format), date_format)
+            print(add_date)
             try:
-                Db_Users().delete()
                 db_users_obj = Db_Users(
                     email = user_request.email,
                     name = user_request.name,
@@ -34,37 +37,53 @@ class User_controller_Impl:
                     percentage = 100,
                     result = 'Passed',
                     recordingpath = '',
-                    date = datetime.strptime(datetime.utcnow().strftime(date_format), date_format)
+                    date = add_date
                 )
 
                 db_users_obj.add()
-                resp = []
+                db.session.refresh(db_users_obj)
+                return UserObject(id=db_users_obj.id), 200
+            except Exception as ex:
+                self.logger.error(ex, exc_info=True)
+                return Error(code=500, message=ex)
+
+    @wrap(log_entering, log_exiting)
+    def get_userdata(self, accept_version):
+        version_info = utils.get_api_version(accept_version)
+        if version_info is None or version_info.lower() == DEFAULT_API_VERSION:
+            try:
                 users = Db_Users.get_all()
-                for user in users:
-                    print(user.id)
-                    print(user.email)
-                    resp.append(
-                        UsersModel(
+                if users is None:
+                    return Error(code=404, message="No user data present"), 404
+                if users[0] is not None:
+                    resp = []
+                    for user in users:
+                        resp.append(GetUserDataObject(
                             id=user.id,
-                            email=user.email,
                             name=user.name,
+                            email=user.email,
                             role=user.role,
                             question=user.question,
                             answer=user.answer,
                             percentage=user.percentage,
                             result=user.result,
                             recordingpath=user.recordingpath,
-                            _date=user.date.strftime(date_format)
-                        )
-                    )
+                            _date=user.date
+                        ))
 
-                print(resp)
-
-                #return resp, 200
-                return UserObject(id=db_users_obj.id), 200
-                #return "", 200
-
+                    return resp, 200
+                else:
+                    return Error(code=404, message="No user data present"), 404
             except Exception as ex:
                 self.logger.error(ex, exc_info=True)
                 return Error(code=500, message=ex)
 
+    def delete_userdata(self, accept_version):
+        version_info = utils.get_api_version(accept_version)
+        if version_info is None or version_info.lower() == DEFAULT_API_VERSION:
+            try:
+                Db_Users().delete()
+                return make_response(jsonify({'message': 'User record deleted successfully'})), 200
+            except Exception as ex:
+                self.logger.error(ex, exc_info=True)
+                return Error(code=500, message=ex)
